--- a/index.html
+++ b/index.html
@@ -18,33 +18,33 @@
       <h1>Beat Maker!</h1>
       <p>Music at your fingertips</p>
     </header>
-    
+
     <div class="visual"></div>
 
     <div class="pads">
       <div class="pad1">
-        <audio src="./sounds/bubbles.mp3"></audio>
+        <audio class="sound" src="./sounds/sounds_bubbles.mp3"></audio>
       </div>
       <div class="pad2">
-        <audio src="./sounds/sounds_clay.mp3"></audio>
+        <audio class="sound" src="./sounds/sounds_clay.mp3"></audio>
       </div>
       <div class="pad3">
-        <audio src="./sounds/sounds_confetti.mp3"></audio>
+        <audio class="sound" src="./sounds/sounds_confetti.mp3"></audio>
       </div>
       <div class="pad4">
-        <audio src="./sounds/sounds_glimmer.mp3"></audio>
+        <audio class="sound" src="./sounds/sounds_glimmer.mp3"></audio>
       </div>
       <div class="pad5">
-        <audio src="./sounds/sounds_moon.mp3"></audio>
+        <audio class="sound" src="./sounds/sounds_moon.mp3"></audio>
       </div>
       <div class="pad6">
-        <audio src="./sounds/sounds_ufo.mp3"></audio>
+        <audio class="sound" src="./sounds/sounds_ufo.mp3"></audio>
       </div>
     </div>
     </div>
   </div>
 
-    
+    <script src="index.js"></script>
 
   </body>
 </html>
